# fastapi-beauty-app

./: .env  alembic.ini  main.py  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: 275fba410639_added_initial_table.py  e80a99d87cd7_added_orders_table.py
api/: category.py  etablissements.py  services.py  users.py
api/utils/: category.py  etablissements.py  services.py  users.py
auth/: auth_handler.py  jwt_handler.py
db/: db_setup.py
db/models/: Booking_appointments.py  Category.py  Etablissement.py  Favorite.py  Order.py  Review.py  Service.py  User.py  mixins.py
env/: pyvenv.cfg
pydantic_schemas/: category.py  etablissements.py  services.py  users.py
